updated pom.xml with command-line tools